[package]
name = "tornado_cash_heuristics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
ethabi = "17.0.0"
hex = "0.4.3"
hex-literal = "0.3.4"
itertools = "0.10.3"
serde = "1.0.137"
serde_json = "1.0.81"
web3 = "0.18.0"
